Bug 66582 - Report Builder crashes Base
Summary: Report Builder crashes Base
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.0.4.2 release
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: David Tardon
URL:
Whiteboard: target:4.2.0 target:4.1.0 target:4.0.5
Keywords: regression
: 67185 67199 67308 67772 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-04 12:11 UTC by tim
Modified: 2013-08-06 05:32 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:


Attachments
An odb with a report that crashes (10.02 KB, application/vnd.oasis.opendocument.database)
2013-07-04 12:11 UTC, tim
Details
Crash log (77.88 KB, text/x-log)
2013-07-04 12:11 UTC, tim
Details
gdb log with backtrace & more details (28.77 KB, text/plain)
2013-07-04 13:59 UTC, Lionel Elie Mamane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tim 2013-07-04 12:11:07 UTC
Created attachment 82020 [details]
An odb with a report that crashes

I have a report-builder report which runs OK under LO 3.6.6.2 on ubuntu 12.04 64 bit.

On mint debian 32 bit it crashes with the attached crash log.

Run the report in the attached odb (HSQL) to replicate this.

At one point I had 4.1.0.1 running on the ubuntu platform and it crashed there as well, so I suspect it is not related to linux flavour or 32/64 bit. 

I'm aware there are a few other similar reports which are said to have been fixed in 4.0.5 but I don't know if they have the same cause or not, and I don't have 4.0.5 to hand.

(NB this issue was originally raised in #66239, and then in #63817).
Comment 1 tim 2013-07-04 12:11:30 UTC
Created attachment 82021 [details]
Crash log
Comment 2 Lionel Elie Mamane 2013-07-04 12:30:25 UTC
Reproduced in my 4.1 dev tree.

Oy, that looks like a continuance of the SdrObject lifetime issues...
Comment 3 Lionel Elie Mamane 2013-07-04 13:51:28 UTC
This smells like it is part of the Sdr lifecycle saga... The symptom now is that we get in a situation where a rptui::OCustomShape has no model, and thus its getUnoShape merrily goes through NULL pointer.

I presume that the object is not constructed right anymore, or is constructed right and then destroyed and reconstructed again, but without associated model?
Comment 4 Lionel Elie Mamane 2013-07-04 13:59:02 UTC
Created attachment 82024 [details]
gdb log with backtrace & more details
Comment 5 Lionel Elie Mamane 2013-07-04 16:40:55 UTC
Reproduced also in my 4.0 dev tree...
Comment 6 Robert Großkopf 2013-07-04 19:24:40 UTC
I have tested with some more versions and openSUSE 12.3 64bit rpm
LO 4.0.3.3 - the report is executed without any problem.
LO 4.0.4.2 - whole LO crashes when starting the report.
Same with LO 4.1.0.1 and LO 4.2.0.0alpha
Comment 7 David Tardon 2013-07-05 08:26:53 UTC
sigh
Comment 8 David Tardon 2013-07-09 07:42:56 UTC
This could never have worked... The model is set in SvxDrawPage::CreateSdrObject() after _CreateSdrObject() (reportdesign::OReportDrawPage::_CreateSdrObject() in this case) call. My guess is there has been other change that forces the object to be rendered (which forces creation of a UNO shape for it).
Comment 9 David Tardon 2013-07-09 08:42:53 UTC
Okay, let's try this...
Comment 10 Commit Notification 2013-07-09 08:52:52 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e2815a0ffdb5811f220978734354b1033801927

fdo#66582 avoid crash because of missing model



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-07-09 10:16:10 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b69f10db70c10e9f24646e218a13a437faf64cda&h=libreoffice-4-1

fdo#66582 avoid crash because of missing model


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2013-07-09 13:46:46 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ddd9d8f5f853c88d7753fda890de5b3f52589f4d&h=libreoffice-4-0

fdo#66582 avoid crash because of missing model


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-07-10 09:04:26 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4015660122e766bf20b6383dce022c6636bc1cca&h=libreoffice-4-1-0

fdo#66582 avoid crash because of missing model


It will be available already in LibreOffice 4.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 tim 2013-07-19 09:28:47 UTC
Verified in Debian 32 bit 4.1.0 RC3 (2013-07-18). 

Thanks.

(btw I didn't update the bug status, since as a mere user I assume people would rather I didn't).
Comment 15 Lionel Elie Mamane 2013-07-19 09:37:38 UTC
(In reply to comment #14)
> Verified in Debian 32 bit 4.1.0 RC3 (2013-07-18). 

> (btw I didn't update the bug status, since as a mere user I assume people
> would rather I didn't).

Don't hesitate to do that in the future. That's why we have the distinction between RESOLVED and VERIFIED:

 - RESOLVED: the developer says he has fixed it

 - VERIFIED: bug reporter or QA or other tester agrees with the developer


Changing state to VERIFIED yourself is helpful. You are encouraged to do it.
Comment 16 tim 2013-07-19 10:12:14 UTC
OK - will do.
Comment 17 Robert Großkopf 2013-07-23 08:25:09 UTC
*** Bug 67185 has been marked as a duplicate of this bug. ***
Comment 18 Robert Großkopf 2013-07-23 08:39:09 UTC
*** Bug 67199 has been marked as a duplicate of this bug. ***
Comment 19 Robert Großkopf 2013-07-25 16:50:35 UTC
*** Bug 67308 has been marked as a duplicate of this bug. ***
Comment 20 Robert Großkopf 2013-08-06 05:32:50 UTC
*** Bug 67772 has been marked as a duplicate of this bug. ***