fdo#66582 avoid crash because of missing model

The SdrObject is still under construction at this point, so it does not
make sense to broadcast changes, because there are not any listeners
anyway.

Change-Id: Ib05e30843b4b0e125d5cae18a481e16fb7e21ba1
(cherry picked from commit 6e2815a0ffdb5811f220978734354b1033801927)
Signed-off-by: David Tardon <dtardon@redhat.com>
Reviewed-on: https://gerrit.libreoffice.org/4781
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>